--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-
+         <h2>                      Tìm Hình Giống Nhau</h2>
         <h3>Score: <span id="result"></span></h3>
 
         <div id="grid"></div>
